apps/talos-home/argus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argus
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
