apps/talos-home/argus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argus
  namespace: argus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argus.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain
          namespace: networking
      services:
        - name: argus
          port: 8853
  tls:
    secretName: argus-tls
